# vk_add_friend

./: README.md  app.py  main.py  pyproject.toml
